--- a/src/app/pokemon/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/pokemon-details/pokemon-details.component.html
@@ -14,7 +14,9 @@
     <div class="card-wrapper"> 
       <div class="card">
         <div class="column">
-          <img [src]="pokemon.imageUrl" [alt]="pokemon.name">
+          <div class="full-image">
+            <img [src]="pokemon.imageUrl" [alt]="pokemon.name">
+          </div>
 
           <div 
             *ngIf="activePokemon.hasAlternateForms" 
