--- a/src/app/pokemon/pokemon-list/pokemon-list.component.css
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.css
@@ -33,7 +33,6 @@
   margin: 0 1rem 3rem;
   border-radius: 4px;
   background-color: #fff;
-  /* animation: slideDown 0.4s ease; */
   overflow: hidden;
 }
 
@@ -67,7 +66,7 @@
   width: 210px;
   height: 210px;
   border-radius: 4px;
-  background-color: #ddd;
+  background-color: rgba(57, 84, 122, 0.1);
   object-fit: contain;
 }
 
