--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,19 +1,40 @@
-<div *ngIf="originalPokedex.length" class="btn-wrapper">
-  <button 
-    (click)="onClick(index)"
-    *ngFor="let btn of originalPokedex; index as index">
-    {{ index + 1 }}
-  </button>
-</div>
-
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="name">Name</label>
     <input id="name" type="text" formControlName="name">
 
-    <div>
+    <div 
+      [hidden]="name.pristine || name.valid">
       <span>... loading</span>
     </div>
+  </div>
+
+  <div class="form-group">
+    <label for="search">Search</label>
+    <div class="drop-container">
+      <input 
+      (input)="searchByName($event.target.value)"
+      type="text" 
+      name="search">
+
+      <ul *ngIf="matches.length" class="matches">
+        <li *ngFor="let match of matches">
+          <a [routerLink]="['/pokedex', match.name | lowercase]">
+            <img [src]="match.iconUrl" [alt]="match.name">
+            <div class="info">
+              <span>{{ match.name }}</span>
+              <span>#{{ match.entryNumber }}</span>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div 
+    *ngIf="name.touched && name?.errors?.exists"
+    class="feedback">
+    <span>This pokemon exists already</span>
   </div>
   
   <button>Submit</button>
