Added new component for filtering options

--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,8 @@
 <div class="design"></div>
 
 <div style="position: relative; top: 3rem">
+  <filter-options></filter-options>
+
   <pk-pagination
     [hidden]="loading"
     [pageCount]="pageCount | async"
