--- a/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
+++ b/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
@@ -1,27 +1,63 @@
+@keyframes showMatches {
+  from {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .wrapper {
-  max-width: 1000px;
-  margin: 0 auto 2rem;
-  background-color: #eee;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+.field-group {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-bottom: 1.2rem;
+}
+
+.field-group .label {
+  margin-bottom: 0.5rem;
 }
 
 .drop-container {
   position: relative;
-  width: 85%;
-}
-
-.drop-container input {
   width: 100%;
 }
 
+input:not([type="checkbox"]) {
+  width: 100%;
+  padding: 0.4rem 1.2rem;
+  color: #444;
+  font-size: 0.85rem;
+  background-color: rgba(57, 84, 122, 0.1);
+  border-radius: 50px;
+}
+
 .matches {
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   width: 100%;
   padding: 0.4rem 0;
   border-radius: 3px;
-  background-color: #444;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  background-color: rgba(51, 62, 78, 0.8);
+  box-shadow: 0 2px 5px rgba(57, 84, 122, 0.3);
+  backdrop-filter: blur(20px);
   overflow: hidden;
   user-select: none;
+  z-index: 2;
+}
+
+.view-matches {
+  animation: showMatches 0.3s ease forwards;
 }
 
 .matches li {
@@ -29,38 +65,120 @@
   transition: background-color 0.3s ease;
 }
 
+.matches .active {
+  background-color: rgba(255, 255, 255, 0.3)
+}
+
+.matches li:not(.active):hover {
+  background-color: rgba(255, 255, 255, 0.3)
+}
+
 .matches li a {
   display: flex;
   width: 100%;
-  padding: 0.5rem;
-  font-size: 0.85rem;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
 }
 
-.matches li a img {
+.pokeball-icon {
+  align-self: center;
+  display: block;
+  width: 17px;
+  height: 17px;
+  margin-right: 1rem;
+}
+
+.pokemon-icon {
   display: block;
   width: 60px;
   height: 60px;
   object-fit: contain;
   border-radius: 2px;
-  background-color: rgb(212, 223, 238);
+  background-color: #f0f5fc;
 }
 
-.matches .info {
+.info {
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
-.matches .info span {
+.info span {
   margin-bottom: 0.6rem;
   color: #fff;
 }
 
-.matches .info span:last-of-type {
-  color: #888;
+.info span:last-of-type {
+  color: #ddd;
+  font-size: 0.80rem;
   font-weight: 600;
 }
 
-.matches li:hover {
-  background-color: #555;
+.advanced-filters {
+  width: 100%;
+  user-select: none;
+  padding: 2rem;
+  border-radius: 4px;
+  background: 
+  linear-gradient(45deg,rgba(89, 202, 255, 0.1), rgba(78, 76, 204, 0.2));
+}
+
+.advanced-filters h3 {
+  margin-bottom: 1rem;
+}
+
+.advanced-filters-btn {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+
+.advanced-filters-btn span {
+  margin-right: 0.5rem;
+}
+
+.advanced-filters button,
+.dual-type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  margin-bottom: 0.6rem;
+  padding: 0.4rem 1rem; 
+  color: #444;
+  border-radius: 4px;
+  background-color: #fff;
+  transition: filter 0.3s ease;
+}
+
+.advanced-filters button {
+  height: 35px;
+  box-shadow: 0 2px 3px rgba(57, 84, 122, 0.2);
+}
+
+.advanced-filters button:active {
+  filter: brightness(95%);
+}
+
+.group-checkbox {
+  width: 150px;
+  cursor: pointer;
+}
+
+.group-checkbox input {
+  display: none;
+}
+
+.group-checkbox span:not(.dual-type) {
+  width: 100%;
+  color: #fff;
+  transition: filter 0.3s ease;
+}
+
+.group-checkbox input:checked + span:not(.dual-type) {
+  filter: brightness(50%);
+}
+
+.group-checkbox input:checked + .dual-type {
+  filter: brightness(90%);
 }
