--- a/src/app/pokemon/pokemon-list/pokemon-list.component.css
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.css
@@ -1,18 +1,28 @@
 .wrapper {
   position: relative;
-  top: 3rem;
   max-width: 1000px;
   margin: 0 auto 4rem;
+  background-color: #fff;
   animation: reveal 0.6s ease;
   overflow: hidden;
+}
+
+.top-content {
+  position: relative; 
+  width: 100%;
+  padding: 2rem;
+}
+
+.top-content h2 {
+  color: #555;
+  font-weight: 400;
+  font-size: 1.7rem;
 }
 
 .preview-wrapper {
   width: 100%;
   height: auto;
-  margin-top: 2rem;
   padding: 2rem 1rem;
-  background-color: #fff;
   overflow: hidden;
   z-index: 1;
 }
@@ -78,13 +88,13 @@
 }
 
 .content span {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
 }
 
 .content span:first-of-type {
-  color: #777;
+  color: #888;
   font-size: 0.80rem;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .content span:last-of-type {
