--- a/src/app/shared/pokemon-common.css
+++ b/src/app/shared/pokemon-common.css
@@ -1,7 +1,7 @@
 /* Common Animations */
 @keyframes reveal {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from { visibility: hidden; opacity: 0; }
+  to { visibility: visible; opacity: 1; }
 }
 
 @keyframes reveal2 {
