--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,6 @@
 <div class="design"></div>
 
-<div *ngIf="!loading">
+<div >
   <div class="wrapper">
     <div class="top-content">
       <h2>Pokédex</h2>
@@ -15,7 +15,7 @@
         (changeNotify)="changePage($event)"></pk-pagination>
     </div>
 
-    <div class="preview-wrapper">
+    <div *ngIf="!loading" class="preview-wrapper">
       <div class="flex-container">
         <a 
           *ngFor="let pokemon of filteredPokedex"
