--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -4,35 +4,13 @@
     <input id="name" type="text" formControlName="name">
 
     <div 
-      [hidden]="name.pristine || name.valid">
+      *ngIf="(name.touched || name.dirty) && name.pending">
       <span>... loading</span>
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="search">Search</label>
-    <div class="drop-container">
-      <input 
-      (input)="searchByName($event.target.value)"
-      type="text" 
-      name="search">
-
-      <ul *ngIf="matches.length" class="matches">
-        <li *ngFor="let match of matches">
-          <a [routerLink]="['/pokedex', match.name | lowercase]">
-            <img [src]="match.iconUrl" [alt]="match.name">
-            <div class="info">
-              <span>{{ match.name }}</span>
-              <span>#{{ match.entryNumber }}</span>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
   <div 
-    *ngIf="name.touched && name?.errors?.exists"
+    *ngIf="name.dirty && name?.errors?.exists"
     class="feedback">
     <span>This pokemon exists already</span>
   </div>
