Remove pokemon-details.guard.spec.ts

--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -16,5 +16,7 @@
   </div>
   
   <button>Submit</button>
+  
+  <a href="https://assets.pokemon.com/assets/cms2/img/pokedex/full/061.png" 
+  download="061.png">Download Image</a>
 </form>
-
