--- a/src/app/reactive-form/reactive-form.component.css
+++ b/src/app/reactive-form/reactive-form.component.css
@@ -5,29 +5,36 @@ form {
 
 .form-group {
   display: flex;
+  flex-direction: column;
   width: 100%;
   margin-bottom: 1rem;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .form-group label {
-  width: 15%;
-  margin-right: 0.4rem;
+  width: 100%;
+  margin-bottom: 0.4rem;
 }
 
-.form-group input {
-  width: 85%;
+.form-group input:not([type="checkbox"]), 
+.form-group select,
+.form-group textarea {
+  width: 100%;
   padding: 0.3rem 1rem;
+  font-size: 0.85rem;
   border: 1px solid #ddd;
   border-radius: 4px;
+}
+
+.form-group textarea {
+  resize: none;
 }
 
 form button {
   display: block;
   width: 100%;
-  padding: 0.4rem 1rem;
+  padding: 0.3rem 1rem;
   color: #eee;
+  font-size: 0.85rem;
   border-radius: 4px;
   background-color: #333;
 }
