--- a/src/app/pokemon/pokemon-list/filter-options/filter-options.component.html
+++ b/src/app/pokemon/pokemon-list/filter-options/filter-options.component.html
@@ -19,7 +19,7 @@
           class="match-item"
           [class.active]="index == keyIndex">
           <a [routerLink]="['/pokedex', match.name | lowercase]">
-            <img class="pokeball-icon" src="assets/img/icon2.png">
+            <img class="pokeball-icon" src="assets/img/icon.png">
 
             <img class="pokemon-icon" [src]="match.iconUrl" [alt]="match.name">
             <div class="info">
