--- a/src/app/pokemon/pokemon-list/pagination/pagination.component.html
+++ b/src/app/pokemon/pokemon-list/pagination/pagination.component.html
@@ -4,7 +4,7 @@
     #navButton
     [style.visibility]="pageCount > 10 ? 'visible' : 'hidden'"
     disabled>
-    <i class="fas fa-angle-double-left"></i>
+    <i class="fas fa-angle-left"></i>
   </button>
 
   <div 
@@ -23,6 +23,6 @@
     (click)="onNavBtnClick('next')"
     #navButton
     [style.visibility]="pageCount > 10 ? 'visible' : 'hidden'">
-    <i class="fas fa-angle-double-right"></i>
+    <i class="fas fa-angle-right"></i>
   </button>
 </div>
