--- a/src/app/pokemon/pokemon-details/navigation-buttons/navigation-buttons.component.css
+++ b/src/app/pokemon/pokemon-details/navigation-buttons/navigation-buttons.component.css
@@ -55,3 +55,15 @@
 .nav-buttons a:hover::after {
   opacity: 1;
 }
+
+@media (max-width: 700px) { 
+  .nav-buttons {
+    padding: 1rem;
+  }
+  
+  .nav-buttons a {
+    width: 45%;
+    border-radius: 4px;
+  }
+
+}
