--- a/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
+++ b/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
@@ -34,11 +34,12 @@
 
 input:not([type="checkbox"]) {
   width: 100%;
+  margin-bottom: 0.2rem;
   padding: 0.4rem 1.2rem;
   color: #444;
   font-size: 0.85rem;
   background-color: rgba(57, 84, 122, 0.1);
-  border-radius: 50px;
+  border-radius: 15px;
 }
 
 .matches {
@@ -47,9 +48,10 @@ input:not([type="checkbox"]) {
   position: absolute;
   width: 100%;
   padding: 0.4rem 0;
-  border-radius: 3px;
-  background-color: rgba(51, 62, 78, 0.8);
-  box-shadow: 0 2px 5px rgba(57, 84, 122, 0.3);
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 2px 5px rgba(57, 84, 122, 0.3), 
+  0 2px 15px rgba(57, 84, 122, 0.2);
   backdrop-filter: blur(20px);
   overflow: hidden;
   user-select: none;
@@ -61,6 +63,7 @@ input:not([type="checkbox"]) {
 }
 
 .matches li {
+  position: relative;
   width: 100%;
   transition: background-color 0.3s ease;
 }
@@ -69,18 +72,35 @@ input:not([type="checkbox"]) {
   background-color: rgba(255, 255, 255, 0.3)
 }
 
-.matches li:not(.active):hover {
-  background-color: rgba(255, 255, 255, 0.3)
+.matches li::before {
+  content: '';
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: 
+  linear-gradient(45deg,rgba(89, 202, 255, 0.4), rgba(78, 76, 204, 0.2));
+  transition: opacity 0.4s ease;
+}
+
+.matches li:hover::before {
+  opacity: 1;
 }
 
 .matches li a {
+  position: relative;
   display: flex;
   width: 100%;
   padding: 0.5rem 1rem;
   font-size: 0.9rem;
+  z-index: 1;
 }
 
 .pokeball-icon {
+  opacity: 0.8;
+  position: relative;
   align-self: center;
   display: block;
   width: 17px;
@@ -105,11 +125,11 @@ input:not([type="checkbox"]) {
 
 .info span {
   margin-bottom: 0.6rem;
-  color: #fff;
+  color: #555;
 }
 
 .info span:last-of-type {
-  color: #ddd;
+  color: #888;
   font-size: 0.80rem;
   font-weight: 600;
 }
@@ -182,4 +202,10 @@ input:not([type="checkbox"]) {
 
 .group-checkbox input:checked + .dual-type {
   filter: brightness(90%);
+}
+
+@media (max-width: 700px) {
+  .field-group {
+    width: 100%;
+  }
 }
