--- a/src/app/pokemon/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon/pokemon-form/pokemon-form.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="pokemonForm">
+<div *ngIf="pokemonForm" class="wrapper">
   <form 
     (ngSubmit)="onSubmit()"
     [formGroup]="pokemonForm" 
