--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -104,8 +104,9 @@ header {
   position: relative;
   width: 100%;
   height: 75px;
-  padding: 0 2rem;
+  padding: 0 1.5rem;
   animation: reveal 0.6s ease forwards;
+  transition: height 0.3s ease, width 0.3s ease;
   user-select: none;
 }
 
@@ -262,4 +263,29 @@ header {
   text-align: center;
   line-height: 1.6rem;
   text-shadow: 0 2px 10px rgba(54, 134, 253, 0.7);
+}
+
+.menu-button {
+  display: none !important;
+}
+
+.menu-button .fa-bars {
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+@media (max-width: 800px) {
+  /* header {
+    top: 0;
+    left: 0;
+    position: fixed;
+  } */
+
+  .navbar ul {
+    display: none !important;
+  }
+  
+  .menu-button {
+    display: block !important;
+  }
 }
