--- a/src/app/pokemon/pokemon-details/pokemon-details.component.css
+++ b/src/app/pokemon/pokemon-details/pokemon-details.component.css
@@ -2,9 +2,9 @@
   position: relative; 
   top: 5rem;
   max-width: 1000px;  
-  margin: 0 auto 4rem;
+  min-height: 100vh;
+  margin: 0 auto 5rem;
   animation: reveal 0.5s ease;
-  z-index: 1;
 }
 
 .pokemon-info {
@@ -165,7 +165,7 @@
   width: 200px;
   height: 40px;
   padding: 0 0.7rem;
-  margin: auto;
+  margin: 0 auto 2rem;
   border-radius: 4px;  
   background: #36befd linear-gradient(to right,#36befd 0,#6461f6 100%);
   box-shadow: 0 2px 4px rgba(35, 80, 129, 0.1);
