--- a/src/app/pokemon/pokemon-form/pokemon-form.component.css
+++ b/src/app/pokemon/pokemon-form/pokemon-form.component.css
@@ -3,6 +3,12 @@ input {
   padding: 0;
 }
 
+.wrapper {
+  width: 100%;
+  min-height: 100vh;
+  padding: 1.5rem;
+}
+
 .pokemon-form {
   max-width: 300px;
   margin: 4rem auto 2rem;
@@ -110,7 +116,7 @@ input {
 
 .pokedex-output {
   display: block;
-  width: 500px; 
+  max-width: 500px; 
   height: 200px;
   margin: 2rem auto 4rem;
   padding: 1.2rem;
