--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,7 +23,7 @@
 .slidable {
   position: relative;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   overflow: hidden;
   background-color: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
