--- a/src/app/pokemon/pokemon-list/pagination/pagination.component.css
+++ b/src/app/pokemon/pokemon-list/pagination/pagination.component.css
@@ -49,6 +49,8 @@
   overflow-x: scroll;
   -mz-scrollbars: 0;
   border-radius: 38px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .page-button-wrapper::-webkit-scrollbar {
