--- a/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
+++ b/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
@@ -209,3 +209,22 @@ input:not([type="checkbox"]) {
     width: 100%;
   }
 }
+
+/* @media (max-width: 460px) {
+  .drop-container {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 300;
+  }
+
+  .matches {
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    z-index: 1000;
+  }
+
+  .matches::-webkit-scrollbar {
+    display: none;
+  }
+} */
