--- a/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
+++ b/src/app/pokemon/pokemon-list/filter-options/filter-options.component.css
@@ -62,17 +62,15 @@ input:not([type="checkbox"]) {
   animation: showMatches 0.3s ease forwards;
 }
 
-.matches li {
+.matches li,
+.matches li.active {
   position: relative;
   width: 100%;
   transition: background-color 0.3s ease;
 }
 
-.matches .active {
-  background-color: rgba(255, 255, 255, 0.3)
-}
-
-.matches li::before {
+.matches li::before,
+.matches li.active::before {
   content: '';
   opacity: 0;
   position: absolute;
@@ -82,10 +80,11 @@ input:not([type="checkbox"]) {
   height: 100%;
   background: 
   linear-gradient(45deg,rgba(89, 202, 255, 0.4), rgba(78, 76, 204, 0.2));
-  transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease ;
 }
 
-.matches li:hover::before {
+.matches li:hover::before,
+.matches li.active:hover::before {
   opacity: 1;
 }
 
