--- a/src/app/pokemon/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/pokemon-details/pokemon-details.component.html
@@ -15,7 +15,7 @@
       <div class="card">
         <div class="column">
           <div class="full-image">
-            <img [src]="pokemon.imageUrl" [alt]="pokemon.name">
+            <img image-loader [src]="pokemon.imageUrl" [alt]="pokemon.name">
           </div>
 
           <div 
